# Zraft

./: .gitignore  CMakeLists.txt  README.md  Zraft_Config.cmake
Zraft/: state.h  znode.cpp  znode.h
doc/: demo_main.cc  rpc
src/: CMakeLists.txt  define_input.h  zcandidate.cc  zcandidate.h  zmaster.cc  zmaster.h  znode.cc  znode.h  zraft.cc  zraft.h  zraft_opt.cc  zraft_opt.h  zrole.cc  zrole.h  zservant.cc  zservant.h
src/rpc/: CMakeLists.txt  init.cc  init.h  network.cc  network.h  rpc.cc  rpc.h  rpc_args.h  rpc_server.cc  rpc_server.h  zraft_rpc.cc  zraft_rpc.h
src/test/: CMakeLists.txt  json_parse_test.cc  rpc_test_cli.cc  rpc_test_ser.cc  zraft_connections_test.cc  zraft_election_test.cpp  zraft_opt_test.cc
